1999-08-12  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.[hm], collections.h ([ArchiverValue_c -setLong:],
	[ArchiverValue_c -setInteger:], [-getLong]): Remove.
	([ArchiverValue_c -setLongDouble:], [ArchiverValue_c
	-getLongDouble],
	[ArchiverValue_c -setLongDouble:], [ArchiverValue_c -getLongLong],
	[ArchiverValue_c -getUnsigned]): Add.
	([InputStream_c -getExpr], [ArchiverList_c -lispOutDeep:]): Use
	getZone macro.
	([InputStream_c -getExpr]): Use long long as default numeric type
	(not long).  Recognize L0 as long double.  Use strtoll instead of
	strtol.
	([ArchiverArray_c -setArray:], [ArchiverValue_c -lispOutDeep:]):
	([ArchiverArray_c -setArray:], [ArchiverValue_c -lispOutDeep:]):
	Handle long long and long double.
	([ArchiverArray_c -setArray:]): Use alloc: instead of xcalloc.
	Use scratchZone for index and drop it.
	([ArchiverArray_c -drop]): Drop using free: instead of XFREE.
	Call superclass drop.

	* InputStream.h (ArchiverValue_c): Add long double and long long.
	Remove long and int.

1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* OutputStream.[hm], collections.h ([OutputStream_c
	-catLongDouble:]): New method.

1999-08-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* OutputStream.m ([OutputStream_c -catLongLong:]): 
	Raise an error if no long long specifier is available (e.g. HPUX9).

1999-08-06  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* OutputStream.[hm], collections.h ([OutputStream_c
	-catPointer:]): New method.

1999-08-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* InputStream.m ([InputStream_c -getExpr]): Change strtol failure
	from error to warning.

	* Map.m ([Map_c -{hdf5,lisp}In:]): Use STRDUP instead of strdup.

1999-08-01  Alex Lancaster  <alex@santafe.edu>

	* collections.h (ForEachKey): New protocol.
	(KeyedCollection):  Adopt it.

	* Map.[hm] ([Map_c -{forEachKey:, forEachKey::, forEachKey:::,
	forEachKey::::}]): New methods to implement the `ForEachKey'